update templates and edit pages
did some fine tuning to preview page and all template pages; still need to figure out how to do background pic on template1; most editinfo pages done but getting multivaldictkey errors on editeducation and editadditional because of empty entries

--- a/resume_proj/resume_app/static/css/template1.css
+++ b/resume_proj/resume_app/static/css/template1.css
@@ -10,7 +10,7 @@
 }
 
 .bgded{
-    background-image: url( "{% static '{{ user.picture.img }}' %}");
+    background-image: url( "{% static 'img/948656-Jamesbondskyfall-1441105545-700-640x480.jpg' %}");
 }
 
 #intro, #profile_pic{
