--- a/resume_proj/resume_app/templates/editexperience.html
+++ b/resume_proj/resume_app/templates/editexperience.html
@@ -59,16 +59,42 @@
         <form action="/editexperience" method="POST" id="experience">
             {% csrf_token %}
             {% for experience in user.experiences.all %}
-        <div class="exp_form">
-            <div class="mb-3">
-                <label for="title" class="form-label">Title</label>
-                <input type="text" class="form-control" id="exp_title" value="{{experience.title}}" name="title">
+            {% if experience.title1 %}
+            <div class="exp_form">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" class="form-control" id="exp_title" value="{{experience.title1}}" name="title1">
+                </div>
+                <div class="mb-3">
+                    <label for="desc" class="desc-form-label">Description</label>
+                    <textarea class="form-control" id="exp_desc" rows="3" name="desc1">{{experience.desc1}}</textarea>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="desc" class="desc-form-label">Description</label>
-                <textarea class="form-control" id="exp_desc" rows="3" name="desc">{{experience.desc}}</textarea>
+            {% endif %}
+            {% if experience.title2 %}
+            <div class="exp_form">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" class="form-control" id="exp_title" value="{{experience.title2}}" name="title2">
+                </div>
+                <div class="mb-3">
+                    <label for="desc" class="desc-form-label">Description</label>
+                    <textarea class="form-control" id="exp_desc" rows="3" name="desc2">{{experience.desc2}}</textarea>
+                </div>
             </div>
-        </div>
+            {% endif %}
+            {% if experience.title3 %}
+            <div class="exp_form">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" class="form-control" id="exp_title" value="{{experience.title3}}" name="title3">
+                </div>
+                <div class="mb-3">
+                    <label for="desc" class="desc-form-label">Description</label>
+                    <textarea class="form-control" id="exp_desc" rows="3" name="desc3">{{experience.desc3}}</textarea>
+                </div>
+            </div>
+            {% endif %}
             {% endfor %}
             <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
                 <button class="btn btn-primary" id="submit" type="submit">Back Home</button>
