--- a/resume_proj/resume_app/templates/preview.html
+++ b/resume_proj/resume_app/templates/preview.html
@@ -27,7 +27,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Welcome {{user.first_name}} {{user.last_name}}!</a>
+            <a class="navbar-brand" href="/resumehome/{{user.id}}">Welcome {{user.first_name}} {{user.last_name}}!</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,21 +44,17 @@
     <h2>Choose a Template</h2>
     <br>
     <div id="pic_temps">
-        <div class="temp_one">
-            <img src="{% static 'img/Background_picture_template_v2.jpg' %}" class="mx-auto d-block" alt="Template 1" id="first_pic">
-            <p><a href="/template1/{{user.id}}" id="temp_one" role="button">Template 1</a></p>
+        <div class="temp_one_two">
+            <a href="/template1/{{user.id}}" id="temp_one" role="button"><img src="{% static 'img/Background_picture_template_v2.jpg' %}" class="mx-auto d-block" alt="Template 1" id="first_pic"></a>
+            <p><a href="/template1/{{user.id}}" id="temp_one" role="button">Coming soon! Resume with profile picture in the background</a></p>
+            <a href="/template2/{{user.id}}" id="temp_one" role="radio"><img src="{% static 'img/Background_picture_template2_v3.jpg' %}" class="mx-auto d-block" alt="Template 2" id="second_pic"></a>
+            <p><a href="/template2/{{user.id}}" id="temp_one" role="radio">Resume with profile picture</a></p>
         </div>
-        <div class="temp_two">
-            <img src="{% static 'img/Background_picture_template2_v2.jpg' %}" class="mx-auto d-block" alt="Template 2" id="second_pic">
-            <p><a href="/template2/{{user.id}}" id="temp_one" role="radio">Template 2</a></p>
-        </div>
-        <div class="temp_three">
-            <img src="{% static 'img/Background_picture_template_v2.jpg' %}" class="mx-auto d-block" alt="Template 2" id="third_pic">
-            <p><a href="/template3/{{user.id}}" id="temp_one" role="radio">Template 3</a></p>
-        </div>
-        <div class="temp_four">
-            <img src="{% static 'img/Background_picture_template_v2.jpg' %}" class="mx-auto d-block" alt="Template 2" id="third_pic">
-            <p><a href="/template4/{{user.id}}" id="temp_one" role="radio">Template 4</a></p>
+        <div class="temp_three_four">
+            <a href="/template3/{{user.id}}" id="temp_one" role="radio"><img src="{% static 'img/Background_picture_template3_v1.jpg' %}" class="mx-auto d-block" alt="Template 2" id="third_pic"></a>
+            <p><a href="/template3/{{user.id}}" id="temp_one" role="radio">Interactive resume with picture</a></p>
+            <a href="/template4/{{user.id}}" id="temp_one" role="radio"><img src="{% static 'img/Background_picture_template4_v1.jpg' %}" class="mx-auto d-block" alt="Template 2" id="fourth_pic"></a>
+            <p><a href="/template4/{{user.id}}" id="temp_one" role="radio">Resume with no picture</a></p>
         </div>
     </div>
 </body>
