--- a/resume_proj/resume_app/templates/template1.html
+++ b/resume_proj/resume_app/templates/template1.html
@@ -42,7 +42,8 @@
             <!-- <h1>{{user.name}}</h1> -->
         </div>
         <div class="address1">
-            <p><a href=" http://maps.google.com/?q={{user.contact.street}} {{user.contact.city}} {{user.contact.state}} {{user.contact.zip}}" target="_blank">{{user.contact.street}}</a></p>
+            <!-- <a href=" http://maps.google.com/?q={{user.contact.street}} {{user.contact.city}} {{user.contact.state}} {{user.contact.zip}}" target="_blank">{{user.contact.street}}</a> -->
+            <p>{{user.contact.street}}</p>
         </div>
         <div class="address2">
             <p> {{user.contact.city}}, {{user.contact.state}} {{user.contact.zip}}</p>
