--- a/resume_proj/resume_app/static/css/preview.css
+++ b/resume_proj/resume_app/static/css/preview.css
@@ -2,16 +2,22 @@ h2, p{
     text-align: center;
 }
 
-#first_pic, #second_pic, #third_pic{
-    width: 400px;
-    height: 300px;
+#first_pic, #second_pic, #third_pic, #fourth_pic{
+    width: 350px;
+    height: 350px;
 }
 
-/* #temp_one{
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-} */
+#pic_temps{
+    display: flex;
+    place-content: center;
+}
+
+.temp_one_two, .temp_three_four{
+    display: inline-block;
+    width: 450px;
+    place-content: center;
+    height: fit-content;
+}
 
 span{
     font-size: small;
