--- a/resume_proj/resume_app/templates/editadditional.html
+++ b/resume_proj/resume_app/templates/editadditional.html
@@ -59,32 +59,68 @@
     <p>These entries can range from: honors/awards; certifications; volunteerism; fluent languages</p>
     <br>
     <div id="addl_form">
-        <form action="/editadditional/{{user.id}}" method="POST" id="additional" >
+        <form action="/editadditional" method="POST" id="additional" >
             {% csrf_token %}
-            {% for additional in additionals %}
+            {% for additional in user.additionals.all %}
         <div class="addl_form">
             <div class="mb-3" id="title_div">
                 <label for="info" class="form-label">Additional Info Entry</label>
                 <input type="text" class="form-control" id="addl_info" value="{{additional.info}}" name="info">
             </div>
         </div>
+        {% if additional.info1 %}
+        <div class="addl_form">
+            <div class="mb-3" id="title_div">
+                <label for="info" class="form-label">Additional Info Entry</label>
+                <input type="text" class="form-control" id="addl_info" value="{{additional.info1}}" name="info1">
+            </div>
+        </div>
+        {% endif %}
+        {% if additional.info2 %}
+        <div class="addl_form">
+            <div class="mb-3" id="title_div">
+                <label for="info" class="form-label">Additional Info Entry</label>
+                <input type="text" class="form-control" id="addl_info" value="{{additional.info2}}" name="info2">
+            </div>
+        </div>
+        {% endif %}
+        {% if additional.info3 %}
+        <div class="addl_form">
+            <div class="mb-3" id="title_div">
+                <label for="info" class="form-label">Additional Info Entry</label>
+                <input type="text" class="form-control" id="addl_info" value="{{additional.info3}}" name="info3">
+            </div>
+        </div>
+        {% endif %}
+        {% if additional.info4 %}
+        <div class="addl_form">
+            <div class="mb-3" id="title_div">
+                <label for="info" class="form-label">Additional Info Entry</label>
+                <input type="text" class="form-control" id="addl_info" value="{{additional.info4}}" name="info4">
+            </div>
+        </div>
+        {% endif %}
+        {% if additional.info5 %}
+        <div class="addl_form">
+            <div class="mb-3" id="title_div">
+                <label for="info" class="form-label">Additional Info Entry</label>
+                <input type="text" class="form-control" id="addl_info" value="{{additional.info5}}" name="info5">
+            </div>
+        </div>
+        {% endif %}
+        {% if additional.info6 %}
+        <div class="addl_form">
+            <div class="mb-3" id="title_div">
+                <label for="info" class="form-label">Additional Info Entry</label>
+                <input type="text" class="form-control" id="addl_info" value="{{additional.info6}}" name="info6">
+            </div>
+        </div>
+        {% endif %}
             {% endfor %}
+            <div class="d-grid gap-2 col-2 mx-auto" id="final_btm_btn">
+                <button class="btn btn-primary" id="submit" type="submit">Back Home</button>
+            </div>
         </form>
     </div>
-    <input type="button" id="add_new" value="Add Additional">
-    <br>
-    <br>
-    <h2>Upload a Profile Picture</h2>
-    <form action="/editpicture/{{user.id}}" method="POST" id="picture" enctype="multipart/form-data">
-        {% csrf_token %}
-    <div class="img_form">
-        <div class="mb-3">
-            <label for="formFile" class="form-label">{{picture.img}}</label>
-            <input class="form-control" type="file" id="formFile" name="img" >
-        </div>
-    </div>
-    </form>
-    <div class="d-grid gap-2 col-2 mx-auto" id="final_btm_btn">
-        <button class="btn btn-primary" id="submit" type="submit">Back Home</button>
-    </div>
-            
+</body>
+</html>
