--- a/resume_proj/resume_app/templates/index.html
+++ b/resume_proj/resume_app/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Profile Resume</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
@@ -14,24 +14,24 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text">Marketing Site</li>
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
+          <li class="menu-text">Profile Resume</li>
+          <li><a href="/logreg">Register</a></li>
+          <li><a href="/logreg">Login</a></li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a href="#">Three</a></li>
-          <li><a href="#">Four</a></li>
-          <li><a href="#">Five</a></li>
-          <li><a href="#">Six</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contactme">Contact</a></li>
+          <li><a href="/media">Social Media</a></li>
+          <li><a href="/recommendations">Recommendations</a></li>
         </ul>
       </div>
     </div>
     <!-- End Top Bar -->
 
 
-    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+    <!-- <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
       <ul class="orbit-container">
         <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous Slide</span>&#9664;</button>
         <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
@@ -48,33 +48,34 @@
           <img src="https://placehold.it/2000x750">
         </li>
       </ul>
-    </div>
+    </div> -->
 
     <div class="row column text-center">
+      <br>
       <h2>Want to modernize your resume?</h2>
       <hr>
     </div>
 
-    <div class="row small-up-2 large-up-4">
+    <div id="pics" class="row small-up-2 large-up-4">
       <div class="column">
         <img class="img-fluid" src="{% static 'img/Background_picture_template_v2.jpg' %}">
         <h5>Profile picture in the background</h5>
-        <a href="/logreg" class="button expanded">Create Account</a>
+        <p><a href="/logreg" class="button expanded">Create Account</a></p>
       </div>
       <div class="column">
         <img class="img-fluid" src="{% static 'img/Background_picture_template2_v3.jpg' %}">
         <h5>Profile picture front and center</h5>
-        <a href="/logreg" class="button expanded">Create Account</a>
+        <p><a href="/logreg" class="button expanded">Create Account</a></p>
       </div>
       <div class="column">
         <img class="img-fluid" src="{% static 'img/Background_picture_template3_v1.jpg' %}">
         <h5>Interactive resume with profile picture</h5>
-        <a href="/logreg" class="button expanded">Create Account</a>
+        <p><a href="/logreg" class="button expanded">Create Account</a></p>
       </div>
       <div class="column">
         <img class="img-fluid" src="{% static 'img/Background_picture_template4_v1.jpg' %}">
         <h5>Ol Reliable</h5>
-        <a href="/logreg" class="button expanded">Create Account</a>
+        <p><a href="/logreg" class="button expanded">Create Account</a></p>
       </div>
     </div>
 
@@ -82,18 +83,18 @@
 
     <div class="row column">
       <div class="callout primary">
-        <h3>Really big special this week on items.</h3>
+        <h3>Don't wait! Make your resume standout today!</h3>
       </div>
     </div>
 
     <hr>
 
     <div class="row column text-center">
-      <h2>Some Other Neat Products</h2>
+      <h2>Templates will be updated and added periodically</h2>
       <hr>
     </div>
 
-    <div class="row small-up-2 medium-up-3 large-up-6">
+    <!-- <div class="row small-up-2 medium-up-3 large-up-6">
       <div class="column">
         <img class="thumbnail" src="https://placehold.it/300x400">
         <h5>Nulla At Nulla Justo, Eget</h5>
@@ -224,7 +225,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="callout large secondary">
       <div class="row">
