--- a/resume_proj/resume_app/templates/index.html
+++ b/resume_proj/resume_app/templates/index.html
@@ -22,8 +22,8 @@
       <div class="top-bar-right">
         <ul class="menu">
           <li><a href="/about">About</a></li>
-          <li><a href="/contactme">Contact</a></li>
-          <li><a href="/media">Social Media</a></li>
+          <li><a href="/contact">Contact</a></li>
+          <li><a href="/media">Media</a></li>
           <li><a href="/recommendations">Recommendations</a></li>
         </ul>
       </div>
