--- a/resume_proj/resume_app/templates/logreg.html
+++ b/resume_proj/resume_app/templates/logreg.html
@@ -6,61 +6,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        span{
-            font-size: small;
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/recommend.css' %}">
 </head>
 
 <body>
-    <div class="container">
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+        <!-- NAVBAR -->
+            <a class="navbar-brand" href="/">Profile Resume</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto"></ul>
+                <span class="navbar-text">
+                    <a href="/">Home</a>
+                    <a href="/about">About</a>
+                    <a href="/contact">Contact</a>
+                    <a href="/media">Media</a>
+                    <a href="/recommend">Recommendations</a>
+                </span>
+            </div>
+        </div>
+    </nav><!-- /NAVBAR -->
         <div class="row">
             <div class="col-6 px-3">
                 <br>
+                <br>
+                <br>
                 <h2>Register</h1>
-                <form action="/register" method="post">
+                <form action="/register" method="post" id="register">
                     {% csrf_token %}
                     {% for message in messages %}
                         <p>{{ message }}</p>
                     {% endfor %}
-                    <div class="form-group row">
-                        <label for="first_name" class="col-sm-4 col-form-label col-form-label-sm">First Name</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control form-control-sm" name="first_name">
-                            
-                            </ul>
+                    <div class="row mb-3">
+                        <label for="first_name" class="col-sm-2 col-form-label">First Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="first_name">
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label for="last_name" class="col-sm-4 col-form-label col-form-label-sm">Last Name</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control form-control-sm" name="last_name">
-                            </ul>
+                    <div class="row mb-3">
+                        <label for="last_name" class="col-sm-2 col-form-label">Last Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="last_name">
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label for="email" class="col-sm-4 col-form-label col-form-label-sm">Email</label>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control form-control-sm" name="email">
-                            </ul>
+                    <div class="row mb-3">
+                        <label for="email" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="email">
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label for="password" class="col-sm-4 col-form-label col-form-label-sm">Password <span>(must be at least 8 characters)</span></label>
-                        <div class="col-sm-8">
-                            <input type="password" class="form-control form-control-sm" name="password">
-                            </ul>
+                    <div class="row mb-3">
+                        <label for="password" class="col-sm-2 col-form-label">Password <span>(must be at least 8 characters)</span></label>
+                        <div class="col-sm-10">
+                            <input id="pass_word" type="password" class="form-control" name="password">
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label for="pw_conf" class="col-sm-4 col-form-label col-form-label-sm">Confirm
+                    <div class="row mb-3">
+                        <label for="pw_conf" class="col-sm-2 col-form-label">Confirm
                             Password <span>(must match Password)</span></label>
-                        <div class="col-sm-8">
-                            <input type="password" class="form-control form-control-sm" name="pw_conf">
+                        <div class="col-sm-10">
+                            <input id="pw_conf" type="password" class="form-control" name="pw_conf">
                         </div>
                     </div>
                     <button type="submit">Register</button>
@@ -68,24 +89,24 @@
             </div>
             <div class="col-6 px-3">
                 <br>
-                <h3>Login</h1>
+                <br>
+                <br>
+                <h2>Login</h2>
                 <form action="/login" method="post">
                     {% csrf_token %}
-                    <div class="form-group row">
-                        <label for="email" class="col-sm-3 col-form-label col-form-label-sm">Email</label>
+                    <div class="row mb-3">
+                        <label for="email" class="col-sm-2 col-form-label">Email</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control form-control-sm" name="email">
-                            </ul>
+                            <input type="text" class="form-control" name="email">
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label for="password" class="col-sm-3 col-form-label col-form-label-sm">Password</label>
+                    <div class="row mb-3">
+                        <label for="password" class="col-sm-2 col-form-label">Password</label>
                         <div class="col-sm-9">
-                            <input type="password" class="form-control form-control-sm" name="password">
-                            </ul>
+                            <input type="password" class="form-control" name="password">
                         </div>
                     </div>
-                    <button type="submit">Login</button>
+                    <button type="submit" >Login</button>
                 </form>
             </div>
         </div>
