--- a/resume_proj/resume_app/templates/employment.html
+++ b/resume_proj/resume_app/templates/employment.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col">
                     <label for="date_from1" class="form-label">From <span class="emp_notes">(must be in the past)</span></label>
-                    <input type="date" class="form-control" id="emp_from" value="{{employment.date_from1|date:date}}" name="date_from1">
+                    <input type="date" class="form-control" id="emp_from"  name="date_from1">
                 </div>
                 <div class="col">
                     <label for="date_to1" class="form-label">To</label>
