--- a/resume_proj/resume_app/templates/preview.html
+++ b/resume_proj/resume_app/templates/preview.html
@@ -35,6 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto"></ul>
                 <span class="navbar-text">
+                    <a href="/resumehome/{{user.id}}" role="button" class="btn btn-sm btn-info ml-2 text-white">Home</a>
                     <a href="/logout" role="button" class="btn btn-sm btn-info ml-2 text-white">Logout</a>
                 </span>
             </div>
