add readme and update
added a readme so i can add images and video of project; updated homepage footer

--- a/resume_proj/resume_app/static/css/index.css
+++ b/resume_proj/resume_app/static/css/index.css
@@ -17,6 +17,12 @@ h5{
     height: 60px;
 }
 
+footer{
+    display: flex;
+    place-content: center;
+    align-content: center;
+}
+
 p{
     text-align: center;
     max-width: 267px;
