fixed and broke editpicture page
tried finishing all edit pages; got to edit picture page; fixed functionality to include a thumbnail preview but now a user cannot upload new pic after deleting one; needs to be fixed

--- a/resume_proj/resume_app/static/css/preview.css
+++ b/resume_proj/resume_app/static/css/preview.css
@@ -26,3 +26,14 @@ span{
 #pic_form{
     margin: 5px;
 }
+
+#pic_preview{
+    display: flex;
+    place-content: center;
+}
+
+#delete_btn{
+    margin-top: 5px;
+    display: flex;
+    place-content: center;
+}
